<resources>
    <string name="app_name">User</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Signup</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="already_registered_signin_here">Already Registered? SignIn Here</string>
    <string name="user_login">User Login</string>
    <string name="enter_login_email">Enter email</string>
    <string name="enter_login_password">Enter password</string>
    <string name="signin">SignIn</string>
    <string name="signup_here">Not have an account? SignUp Here</string>
    <string name="user_registration">User Registration</string>
    <string name="tv1">Book Malaysia Bus Tickets Online</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="zul">Zulhilmi</string>

    <string-array name="pax">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="notfound">Oops, no trips found.</string>
</resources>
