<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.user.LoginRegister.RegisterActivity"
    android:orientation="vertical"
    android:background="#F48FB1"
    android:paddingLeft="18dp"
    android:paddingRight="18dp">




    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>



        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Enter Username"
            android:inputType="text"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="10dp"/>

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/signup"
            android:background="@drawable/btn_border"/>

        <TextView
            android:text="@string/already_registered_signin_here"
            android:id="@+id/textViewSignin"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>




</LinearLayout>
